# horus

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish.yml  quality.yml  release.yml
src/: datesystem.rs  holidayprovider.rs  lib.rs
src/modules/providers/: germanholidayprovider.rs  greeceholidayprovider.rs  mod.rs
src/modules/providers/base/: catholicprovider.rs  mod.rs  orthodoxprovider.rs
src/modules/types/: countrycode.rs  mod.rs  month.rs  occurence.rs  publicholiday.rs  publicholidaytype.rs
src/providers/: mod.rs
src/providers/base/: catholicprovider.rs  orthodoxprovider.rs
src/providers/locations/: germanholidayprovider.rs  greeceholidayprovider.rs  mod.rs  polandholidayprovider.rs  russiaholidayprovider.rs  ukrainholidayprovider.rs  unitedkingdomholidayprovider.rs  unitedstatesholidayprovider.rs
src/types/: countrycode.rs  mod.rs  occurrence.rs  publicholiday.rs  publicholidaytype.rs
