[package]
name = "horus"
version = "0.1.0"
description = "HOliday helper for RUSt"
authors = ["Phil91 <info@philschneider.de>"]
edition = "2021"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Phil91/horus"
repository = "https://github.com/Phil91/horus"
keywords = ["date", "holidays", "vacation"]
categories = ["date-and-time"]

[lib]
name = "horus"

[dependencies]
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"